--- a/configs/rl_racecar.toml
+++ b/configs/rl_racecar.toml
@@ -18,6 +18,7 @@ gamma = 0.99
 batch_size = 64
 update_epochs = 4
 minibatch_size = 32
+steps = 10000
 checkpoint_every = 1000
 checkpoint_dir = "runs/ppo/ckpt"
 
@@ -26,6 +27,8 @@ freeze_encoders = false
 pretrained_ckpt = "runs/example/ckpt"
 
 [actions]
+# Dimensions of continuous action space
+dim = 2
 # Set these to env action bounds if different from [-1, 1]
 low = [-1.0, -1.0]
 high = [1.0, 1.0]
